# halbach-optimizer

./: .gitignore  .pre-commit-config.yaml  3d_coil.md  AGENTS.md  README.md  ROADMAP.md  WORKFLOW.md  c_impliment_plan.md  diam_opt_saved_meta.json  diam_opt_saved_results.npz  plan_c_ring_by_ring_strategy_spec.md  plan_c_specification_final.md  pyproject.toml  requirements-dev.txt  robust_opt_halbach_gradnorm_minimal.py
app/: __init__.py  gui_config.py  gui_defaults.json  plan_c_ring_playback.py  plan_c_run_selector.py  plotly_views.py  streamlit_app.py
app/pages/: plan_c_assembly.py  plan_c_ring_simulation.py  plan_c_simulation.py
backend/: app.py
bench/: bench_kernels.py
coil/: coil3d_contours_resampled_socp_20260323_064440_20260323_064521.npz  coil3d_contours_resampled_socp_20260323_071243_20260323_071315.npz
docs/: baseline_runs.json  baseline_runs.md  optimization_output_format.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.test.jsx  api.js
halbach/: __init__.py  angles_runtime.py  coil_overlay.py  constants.py  demag_cellavg.py  generate.py  geom.py  io.py  logging_utils.py  magnet_export.py  magnetization_runtime.py  near.py  numba_compat.py  obj_mesh.py  objective.py  perturbation_eval.py  physics.py  radial_profile.py  robust.py  run_io.py  run_types.py  sc_debug.py  sc_linear_system.py  symmetry.py  symmetry_fourier.py  types.py  viz2d.py  viz3d.py
halbach/app_services/: __init__.py  map2d.py  overview.py  runs.py  scene3d.py  types.py
halbach/assembly/: __init__.py  clustering.py  config.py  field_eval.py  inventory.py  io.py  measurement.py  online_assignment.py  orientations.py  ring_quota.py  ring_summary.py  self_consistent_assignment.py  sensitivity.py  sensitivity_cache.py  session.py  simulation.py  slots.py  types.py  ui_payload.py  variation.py  work_units.py
halbach/autodiff/: __init__.py  jax_demag_cellavg.py  jax_objective.py  jax_objective_delta_phi.py  jax_objective_delta_phi_fourier.py  jax_objective_legacy_beta_tilt.py  jax_objective_self_consistent_delta_phi.py  jax_objective_self_consistent_delta_phi_fourier.py  jax_objective_self_consistent_legacy.py  jax_objective_self_consistent_legacy_beta_tilt.py  jax_self_consistent.py
halbach/cli/: __init__.py  dc_ccp_optimize_run.py  dc_ccp_sc_optimize_run.py  dc_optimize_run.py  debug_sc_run.py  generate_run.py  optimize_run.py  plan_c_compute_sensitivity.py  plan_c_session.py  plan_c_simulate.py  viz2d_run.py
halbach/dc/: __init__.py  ccp_sc_linearized.py  ccp_unitcircle.py  dc_io.py  dipole_linmap.py  geom_build.py  init_from_lbfgs.py  qp_relaxed_mxy.py  roi_points.py
halbach/gui/: __init__.py  opt_job.py
halbach/solvers/: lbfgsb.py  types.py
halbach/tools/: __init__.py  normalize_run.py
scripts/: make_baseline_runs.py
tests/: test_angles_runtime_phi.py  test_app_services.py  test_backend_api.py  test_beta_tilt_x_param_map.py  test_coil_overlay_grouping.py  test_coil_overlay_loader.py  test_dc_ccp_sc_linearized_smoke.py  test_dc_ccp_unitcircle_smoke.py  test_dc_dipole_linmap_shapes.py  test_dc_init_from_lbfgs_strict.py  test_dc_qp_relaxed_mxy_smoke.py  test_demag_cellavg.py  test_field_scale.py  test_fourier_x0_basis.py  test_generate_run.py  test_gl_double_delta_equivalence_to_pair_sum.py  test_gl_double_delta_tables.py  test_gl_double_mixed_matches_uniform_when_same_order.py  test_gradcheck_yspace.py  test_jax_delta_phi_zero_matches_legacy.py  test_jax_fourier_zero_matches_delta_rep_zero.py  test_jax_legacy_beta_zero_matches_existing.py  test_jax_matches_analytic.py  test_jax_regularization_terms.py  test_jax_sc_edges_dipole_matches_direct_h.py  test_jax_sc_edges_multi_dipole_matches_direct_h.py  test_jax_sc_edges_transpose_dot_property.py  test_jax_sc_kij_dipole_matches_direct_h.py  test_jax_sc_kij_multi_dipole_matches_direct_h.py  test_jax_sc_legacy_beta_zero_matches_existing.py  test_jax_self_consistent_cellavg_smoke.py  test_jax_self_consistent_chi0_matches_fixed.py  test_jax_self_consistent_delta_chi0_matches_fixed.py  test_jax_self_consistent_field_scale_invariance.py  test_jax_self_consistent_field_scale_invariance_delta.py  test_jax_self_consistent_fourier_chi0_matches_fixed.py  test_jax_self_consistent_implicit_grad_matches_unrolled.py  test_jax_self_consistent_implicit_matches_explicit.py  test_jax_self_consistent_multi_dipole_smoke.py  test_jax_self_consistent_near.py  (+73 more)
